clusterização e descoberta de perfis de investidores

--- a/src/1classificacao_sample.ipynb
+++ b/src/1classificacao_sample.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "ef5b5258",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9e07213a",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "id": "38d2aef3",
    "metadata": {},
    "outputs": [],
@@ -181,51 +181,6 @@
     "\n",
     "y = df['Conta_Ativa'] #df[['UF do Investidor', 'Profissao']]\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_transformed, y, test_size=0.3, random_state=42, stratify=y) #70% Treino e 30%Teste"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "id": "3ad24bc0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Conta_Ativa\n",
-       "0    88466\n",
-       "1     6319\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "9398cdea",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1])"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.unique()"
    ]
   },
   {
@@ -469,6 +424,16 @@
    "metadata": {},
    "source": [
     "## Z - TESTES Com codigo original"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c47bf64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet(\"./data/to_classify/sample_data_cluster.parquet\") "
    ]
   },
   {
