Teste utilizando xgboost

--- a/src/1analise_sample.ipynb
+++ b/src/1analise_sample.ipynb
@@ -8,9 +8,7 @@
       "source": [
         "https://colab.research.google.com/drive/1fTBX7-fI6pyLPk3mMNdhP5gUcMeaef3f?authuser=1#scrollTo=1uzd4DpDG--J\n",
         "\n",
-        "https://colab.research.google.com/drive/1U513UUXfRY5o2ZXs82kgFaG6lZhdUbji?authuser=1#scrollTo=0-z_WkeNzz5s\n",
-        "\n",
-        "https://chatgpt.com/share/68336d34-11e4-8011-b2bf-9928639d3cb2"
+        "https://colab.research.google.com/drive/1U513UUXfRY5o2ZXs82kgFaG6lZhdUbji?authuser=1#scrollTo=0-z_WkeNzz5s"
       ]
     },
     {
@@ -1661,19 +1659,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [],
       "source": [
         "# dados_finais = dados_tesouro.drop(columns=['Codigo do Investidor', 'Faixa Etária', 'Profissao', 'Grupo_Profissao'])\n",
         "# dados_finais = dados_tesouro.drop(columns=['Codigo do Investidor', 'Faixa Etária', 'Grupo_Profissao', 'Macrogrupo_Profissao'])\n",
         "# dados_finais = dados_tesouro.drop(columns=['Codigo do Investidor', 'Grupo_Profissao', 'Macrogrupo_Profissao', 'Idade'])\n",
-        "dados_finais = dados_tesouro_idh.drop(columns=['Codigo do Investidor', 'Grupo_Profissao', 'Idade','UF'])"
+        "dados_finais = dados_tesouro_idh.drop(columns=['Codigo do Investidor','UF'])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
@@ -1701,12 +1699,14 @@
               "      <th>Estado Civil</th>\n",
               "      <th>Genero</th>\n",
               "      <th>Profissao</th>\n",
+              "      <th>Idade</th>\n",
               "      <th>UF do Investidor</th>\n",
               "      <th>Cidade do Investidor</th>\n",
               "      <th>Pais do Investidor</th>\n",
               "      <th>Situacao da Conta</th>\n",
               "      <th>Operou 12 Meses</th>\n",
               "      <th>Faixa Etária</th>\n",
+              "      <th>Grupo_Profissao</th>\n",
               "      <th>Macrogrupo_Profissao</th>\n",
               "      <th>IDH-M 2021</th>\n",
               "    </tr>\n",
@@ -1718,12 +1718,14 @@
               "      <td>Solteiro(a)</td>\n",
               "      <td>M</td>\n",
               "      <td>OUTROS</td>\n",
+              "      <td>28</td>\n",
               "      <td>RS</td>\n",
               "      <td>SANTA ROSA</td>\n",
               "      <td>BRASIL</td>\n",
               "      <td>A</td>\n",
               "      <td>N</td>\n",
               "      <td>Adulto jovem 18 - 29</td>\n",
+              "      <td>Outros</td>\n",
               "      <td>Outros</td>\n",
               "      <td>0.771</td>\n",
               "    </tr>\n",
@@ -1733,12 +1735,14 @@
               "      <td>Desquitado(a)</td>\n",
               "      <td>F</td>\n",
               "      <td>OUTROS</td>\n",
+              "      <td>28</td>\n",
               "      <td>SP</td>\n",
               "      <td>OSASCO</td>\n",
               "      <td>BRASIL</td>\n",
               "      <td>A</td>\n",
               "      <td>N</td>\n",
               "      <td>Adulto jovem 18 - 29</td>\n",
+              "      <td>Outros</td>\n",
               "      <td>Outros</td>\n",
               "      <td>0.806</td>\n",
               "    </tr>\n",
@@ -1748,12 +1752,14 @@
               "      <td>Solteiro(a)</td>\n",
               "      <td>F</td>\n",
               "      <td>OUTROS</td>\n",
+              "      <td>35</td>\n",
               "      <td>BA</td>\n",
               "      <td>SALVADOR</td>\n",
               "      <td>BRASIL</td>\n",
               "      <td>D</td>\n",
               "      <td>N</td>\n",
               "      <td>Adulto 30 - 59</td>\n",
+              "      <td>Outros</td>\n",
               "      <td>Outros</td>\n",
               "      <td>0.691</td>\n",
               "    </tr>\n",
@@ -1763,12 +1769,14 @@
               "      <td>Desquitado(a)</td>\n",
               "      <td>M</td>\n",
               "      <td>OUTROS</td>\n",
+              "      <td>55</td>\n",
               "      <td>SP</td>\n",
               "      <td>JACAREI</td>\n",
               "      <td>BRASIL</td>\n",
               "      <td>D</td>\n",
               "      <td>N</td>\n",
               "      <td>Adulto 30 - 59</td>\n",
+              "      <td>Outros</td>\n",
               "      <td>Outros</td>\n",
               "      <td>0.806</td>\n",
               "    </tr>\n",
@@ -1778,12 +1786,14 @@
               "      <td>Solteiro(a)</td>\n",
               "      <td>M</td>\n",
               "      <td>AUXILIAR DE ESCRITÓRIO E ASSEMELHADOS</td>\n",
+              "      <td>24</td>\n",
               "      <td>SP</td>\n",
               "      <td>ITAQUAQUECETUBA</td>\n",
               "      <td>BRASIL</td>\n",
               "      <td>A</td>\n",
               "      <td>N</td>\n",
               "      <td>Adulto jovem 18 - 29</td>\n",
+              "      <td>Serviços Gerais</td>\n",
               "      <td>Serviços Gerais e Técnicos</td>\n",
               "      <td>0.806</td>\n",
               "    </tr>\n",
@@ -1799,29 +1809,29 @@
               "3     16/01/2023  Desquitado(a)      M                                 OUTROS   \n",
               "4     19/06/2023    Solteiro(a)      M  AUXILIAR DE ESCRITÓRIO E ASSEMELHADOS   \n",
               "\n",
-              "  UF do Investidor Cidade do Investidor Pais do Investidor Situacao da Conta  \\\n",
-              "0               RS           SANTA ROSA             BRASIL                 A   \n",
-              "1               SP               OSASCO             BRASIL                 A   \n",
-              "2               BA             SALVADOR             BRASIL                 D   \n",
-              "3               SP              JACAREI             BRASIL                 D   \n",
-              "4               SP      ITAQUAQUECETUBA             BRASIL                 A   \n",
+              "   Idade UF do Investidor Cidade do Investidor Pais do Investidor  \\\n",
+              "0     28               RS           SANTA ROSA             BRASIL   \n",
+              "1     28               SP               OSASCO             BRASIL   \n",
+              "2     35               BA             SALVADOR             BRASIL   \n",
+              "3     55               SP              JACAREI             BRASIL   \n",
+              "4     24               SP      ITAQUAQUECETUBA             BRASIL   \n",
               "\n",
-              "  Operou 12 Meses          Faixa Etária        Macrogrupo_Profissao  \\\n",
-              "0               N  Adulto jovem 18 - 29                      Outros   \n",
-              "1               N  Adulto jovem 18 - 29                      Outros   \n",
-              "2               N        Adulto 30 - 59                      Outros   \n",
-              "3               N        Adulto 30 - 59                      Outros   \n",
-              "4               N  Adulto jovem 18 - 29  Serviços Gerais e Técnicos   \n",
+              "  Situacao da Conta Operou 12 Meses          Faixa Etária  Grupo_Profissao  \\\n",
+              "0                 A               N  Adulto jovem 18 - 29           Outros   \n",
+              "1                 A               N  Adulto jovem 18 - 29           Outros   \n",
+              "2                 D               N        Adulto 30 - 59           Outros   \n",
+              "3                 D               N        Adulto 30 - 59           Outros   \n",
+              "4                 A               N  Adulto jovem 18 - 29  Serviços Gerais   \n",
               "\n",
-              "   IDH-M 2021  \n",
-              "0       0.771  \n",
-              "1       0.806  \n",
-              "2       0.691  \n",
-              "3       0.806  \n",
-              "4       0.806  "
+              "         Macrogrupo_Profissao  IDH-M 2021  \n",
+              "0                      Outros       0.771  \n",
+              "1                      Outros       0.806  \n",
+              "2                      Outros       0.691  \n",
+              "3                      Outros       0.806  \n",
+              "4  Serviços Gerais e Técnicos       0.806  "
             ]
           },
-          "execution_count": 38,
+          "execution_count": 40,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1832,12 +1842,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [],
       "source": [
         "dados_finais.to_parquet(\"./data/to_classify/sample_data.parquet\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
