Criação da tabela final com testes de clusterização

--- a/src/3table_macro_profissoes.ipynb
+++ b/src/3table_macro_profissoes.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 14,
       "metadata": {
         "id": "t4NoCzk7yO_q"
       },
@@ -41,10 +41,10 @@
         {
           "data": {
             "text/plain": [
-              "501"
+              "0"
             ]
           },
-          "execution_count": 85,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -52,7 +52,7 @@
       "source": [
         "# dados_tesouro_principal = pd.read_parquet(\"./data/sample_investidor_tesouro_direto.parquet\")\n",
         "dados_tesouro_principal = pd.read_parquet(\"./data/base_completa_investidor_tesouro_direto.parquet\")\n",
-        "dados_tesouro = dados_tesouro_principal.copy().sample(n=50000, random_state=42)\n",
+        "dados_tesouro = dados_tesouro_principal.copy().sample(n=10000000, random_state=42)\n",
         "del dados_tesouro_principal\n",
         "import gc\n",
         "gc.collect()"
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -307,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -320,7 +320,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 90,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -331,11 +331,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
-        "dados_tesouro.to_csv('./data/base_tesouro_direto_macro_profissoes.csv', sep=';')"
+        "# dados_tesouro.to_csv('./data/base_tesouro_direto_macro_profissoes.csv', sep=';')\n",
+        "# dados_tesouro.to_parquet('./data/base_tesouro_direto_macro_profissoes.parquet')\n",
+        "dados_tesouro.to_csv('./data/base_tesouro_direto_macro_profissoes_10_milhoes.csv', sep=';')"
       ]
     },
     {
